aarch32: jlong value corrupt when returned from method being deoptimized

XMLWordPrintable

      When the compiled method is being deoptimized at the time it's about to return to the caller the high part of it's long return value is being corrupt. Such deoptimization can happen as a result of use of ForceEarlyRet mechanism

            Assignee:
            Andrey Petushkov
            Reporter:
            Andrey Petushkov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: