8158386: aarch32: jlong value corrupt when returned from method being deoptimized Summary: Save/restore high half of jlongs in r1 Reviewed-by: enevill Contributed-by: andrey@azul.com